@@ -1,6 +1,7 @@
 Version 2024.xxxxx (xxxxx 2024)
 - Fixed: Floorplan, better detection of switches
 - Fixed: Hardware Setup, hiding extra parameters when selecting a python plugin
+- Fixed: PythonEx framework, two notifications where send for switch type devices
 - Changed: EvoHome, now making use of general logging system
 
 Version 2024.4 (January 30th 2024)
